@@ -1,5 +1,7 @@
 Pulse 2 4.2
 =============
+* [FEATURE] Quick action to install ARS SSH key to Machines
+* [FEATURE] Allow deployment of python scripts
 
 Pulse 2 4.1
 =============
